--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,20 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_newgame"
+        android:orderInCategory="150"
+        android:title="@string/action_newgame"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_gamestats"
+        android:orderInCategory="200"
+        android:title="@string/action_gamestats"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="250"
+        android:title="@string/action_about"
+        app:showAsAction="always" />
 </menu>
